--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A booking App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000"
   },
   "author": "Nick Tz",
   "license": "ISC",
